--- a/static/css/mycss.css
+++ b/static/css/mycss.css
@@ -34,6 +34,11 @@ body {
     justify-content: center;
 }
 
+#FileDownload {
+    display: flex;
+    justify-content: center;
+}
+
 .wrapper {
     margin: 30px 0px 30px 0px;
     padding: 10px;
