--- a/templates/index.html
+++ b/templates/index.html
@@ -66,110 +66,66 @@
             </div>
         </div>
     </div>
-    <div class="progress mb-3" id="progressDiv" style="display: none">
+    <div class="progress mb-3" id="progressDiv" style="display: none; height: 30px;">
         <div id="progressBar" class="progress-bar bg-success progress-bar-animated" style="width:0%"></div>
     </div>
-    <input type="submit" class="btn btn-success btn-lg btn-block" value="Upload">
+    <input type="submit" class="btn btn-success btn-lg btn-block" id="submitButton" value="Upload">
 </form>
+
+<div class="d-flex justify-content-center">
+        <div class="spinner-border text-success mb-4" id="loading_spinner" style="width: 6rem; height: 6rem; display: none;" role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+
+    <div class="text-center mb-4" id="loading_msg" style="display: none; font-size: 18px;">
+            Hang on, while we process your files...
+          </div>
+
+<div class="row" id="file_downloads" style="display: none">
+    <div class="col-md-6 col-sm-12 col-lg-6 col-xl-6">
+        <div id="FileDownload">
+            <div class="wrapper">
+                <div class="upload">
+                    <p><a class="upload__button" id="download_link_1">Download</a></p>
+                </div>
+                <div class="uploaded uploaded--one" id="file_download_1">
+                    <i class="fas fa-file-csv"></i>
+                    <div class="file">
+                        <div class="file__name">
+                            <p id="filename_1_down">lorem_ipsum.csv</p>
+                        </div>
+                        <div id="filesize_div_1_down">
+                            0.6 MB
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-sm-12 col-lg-6 col-xl-6">
+        <div id="FileDownload">
+            <div class="wrapper">
+                <div class="upload">
+                    <p><a class="upload__button" id="download_link_2">Download</a></p>
+                </div>
+                <div class="uploaded uploaded--one" id="file_download_2">
+                    <i class="fas fa-file-csv"></i>
+                    <div class="file">
+                        <div class="file__name">
+                            <p id="filename_2_down">lorem_ipsum.csv</p>
+                        </div>
+                        <div id="filesize_div_2_down">
+                            0.5 MB
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
 {% block footer %}
-<script type="text/javascript">
-$(document).ready(function() {
-
-    $("#select_first").on('click', function() {
-
-        $("#file_first").click();
-
-    });
-    $("#select_second").on('click', function() {
-
-        $("#file_second").click();
-
-    });
-    $("#select_third").on('click', function() {
-
-        $("#file_third").click();
-
-    });
-
-
-    $("#file_first").change(function(event) {
-
-        $("#file_upload_1").show();
-        $("#filename_1").text(event.target.files[0].name);
-        $("#filesize_div_1").text(event.target.files[0].name);
-
-    });
-
-    $("#file_second").change(function() {
-
-        $("#file_upload_2").show();
-        $("#filename_2").text(event.target.files[0].name);
-        $("#filesize_div_2").text(event.target.files[0].name);
-
-    });
-
-    $("#file_third").change(function() {
-
-        $("#file_upload_3").show();
-        $("#filename_3").text(event.target.files[0].name);
-        $("#filesize_div_3").text(event.target.files[0].name);
-
-    });
-
-
-    // form submit
-
-    $('form').on('submit', function(event) {
-
-        event.preventDefault();
-
-        var formData = new FormData($('form')[0]);
-
-        $.ajax({
-            xhr: function() {
-                var xhr = new window.XMLHttpRequest();
-
-                xhr.upload.addEventListener('progress', function(e) {
-
-                    console.log(e);
-
-                    if (e.lengthComputable) {
-
-                        console.log('Bytes Loaded: ' + e.loaded);
-                        console.log('Total Size: ' + e.total);
-                        console.log('Percentage Uploaded: ' + (e.loaded / e.total))
-
-                        var percent = Math.round((e.loaded / e.total) * 100);
-
-                        $('#progressDiv').show();
-                        $('#progressBar').css('width', percent + '%');
-
-                    }
-
-                });
-
-                return xhr;
-            },
-            type: 'POST',
-            url: '/',
-            data: formData,
-            processData: false,
-            contentType: false,
-            success: function() {
-                swal({
-                      title: "Success!",
-                      text: "File Uploaded Successfully!",
-                      icon: "success",
-                      button: "Okay",
-                    }).then(function() {
-                            window.location.reload(false);
-                        });
-            }
-        });
-
-    });
-
-});
-</script>
+<script src="{{ url_for('static', filename='js/index_page.js') }}"></script>
 {% endblock %}
