--- a/templates/index.html
+++ b/templates/index.html
@@ -82,12 +82,12 @@
             Hang on, while we process your files...
           </div>
 
-<div class="row" id="file_downloads" style="display: none">
+<div class="row mb-5" id="file_downloads" style="display: none">
     <div class="col-md-6 col-sm-12 col-lg-6 col-xl-6">
         <div id="FileDownload">
             <div class="wrapper">
                 <div class="upload">
-                    <p><a class="upload__button" id="download_link_1">Download</a></p>
+                    <p><a class="upload__button" style="padding: 10px;" id="download_link_1">Download</a></p>
                 </div>
                 <div class="uploaded uploaded--one" id="file_download_1">
                     <i class="fas fa-file-csv"></i>
@@ -107,7 +107,7 @@
         <div id="FileDownload">
             <div class="wrapper">
                 <div class="upload">
-                    <p><a class="upload__button" id="download_link_2">Download</a></p>
+                    <p><a class="upload__button" style="padding: 10px;" id="download_link_2">Download</a></p>
                 </div>
                 <div class="uploaded uploaded--one" id="file_download_2">
                     <i class="fas fa-file-csv"></i>
