file uploading to google drive

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,13 @@
             Hang on, while we process your files...
           </div>
 
+<div style="display: none !important;" class="d-flex justify-content-center" id="drive_links">
+    <ol>
+        <li><b>Drive Link 1: </b><a id="drive_link_1" target="_blank"></a></li>
+        <li><b>Drive Link 2: </b><a id="drive_link_2" target="_blank"></a></li>
+    </ol>
+</div>
+
 <div class="row mb-5" id="file_downloads" style="display: none">
     <div class="col-md-6 col-sm-12 col-lg-6 col-xl-6">
         <div id="FileDownload">
