--- a/Flask Excel Process/templates/index.html
+++ b/Flask Excel Process/templates/index.html
@@ -70,7 +70,7 @@
 
         $("#file_first").change(function (event) {
             $("#dataTable").hide();
-            $("#file_upload_1").show();
+            $('#file_upload_1').show();
             $("#filename_1").text(event.target.files[0].name.slice(0, 25));
             $("#filesize_div_1").text((event.target.files[0].size / (1000 * 1000)).toFixed(2) + " MB");
 
@@ -136,6 +136,7 @@
                     $('#submitButton').val("Upload");
                     $('#progressBar').css('width', '0%');
                     $('#progressDiv').hide();
+                    
                     swal({
                         title: "Success!",
                         text: "Processing Completed!",
